# cortex

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONSTRAINTS.md  CONTRIBUTING.md  CONTRIBUTING_AI.md  Cargo.toml  DECISIONS.md  Dockerfile  IDEAS.md  LICENSE  Makefile  README.md  RESEARCH.md  SECURITY.md  SPEC.md  TASKS.md  VISION.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker.yml  release.yml
config/: browser.toml  default.toml  mcp.toml  models.toml  plugins.toml  security.toml
crates/cortex-api/: Cargo.toml
crates/cortex-api/src/: dto.rs  error.rs  lib.rs  routes.rs  state.rs  stream.rs
crates/cortex-cli/: Cargo.toml
crates/cortex-cli/src/: app.rs  approver.rs  db_audit.rs  main.rs  setup_config.rs  setup_tui.rs
crates/cortex-cli/tests/: cli_smoke.rs
crates/cortex-common/: Cargo.toml
crates/cortex-common/src/: error.rs  ids.rs  lib.rs
crates/cortex-context/: Cargo.toml
crates/cortex-context/src/: builder.rs  history.rs  lib.rs  summary.rs  token.rs
crates/cortex-core/: Cargo.toml
crates/cortex-core/benches/: bench.rs
crates/cortex-core/src/: bus.rs  config.rs  event.rs  kernel.rs  lib.rs  lib.rs.backup  lib.rs.bak2  lifecycle.rs  lifecycle_events.rs  service_registry.rs
crates/cortex-eval/: Cargo.toml
crates/cortex-eval/src/: lib.rs
crates/cortex-events/: Cargo.toml
crates/cortex-events/src/: agent.rs  lib.rs
crates/cortex-llm/: Cargo.toml
crates/cortex-llm/src/: anthropic.rs  config.rs  error.rs  lib.rs  mock.rs  openai_compatible.rs  provider.rs  registry.rs  retry.rs  types.rs
crates/cortex-llm/tests/: openai_compatible_http.rs
crates/cortex-mcp/: Cargo.toml
crates/cortex-mcp/src/: adapter.rs  client.rs  config.rs  error.rs  lib.rs  protocol.rs  transport.rs
crates/cortex-mcp/src/transport/: http.rs  mod.rs  stdio.rs
crates/cortex-mcp/tests/: http_streamable.rs  mock_stdio_server.rs
crates/cortex-memory/: Cargo.toml
crates/cortex-memory/src/: checkpoint.rs  db.rs  error.rs  lib.rs  store.rs  vector.rs
crates/cortex-models/: Cargo.toml
crates/cortex-models/src/: artifact.rs  lib.rs  message.rs  plan.rs  session.rs  task.rs  tool.rs
crates/cortex-models/tests/: golden_serde.rs
crates/cortex-parse/: Cargo.toml
crates/cortex-parse/src/: error.rs  index.rs  language.rs  lib.rs  outline.rs
crates/cortex-plugins/: Cargo.toml
crates/cortex-plugins/src/: config.rs  error.rs  external.rs  host.rs  lib.rs  plugin.rs
crates/cortex-plugins/src/builtins/: echo.rs  mod.rs
crates/cortex-prompts/: Cargo.toml
crates/cortex-prompts/src/: lib.rs
crates/cortex-runtime/: Cargo.toml
crates/cortex-runtime/src/: agent_loop.rs  audit_bundle.rs  audit_lenses.rs  context.rs  error.rs  lib.rs  runtime.rs  subagent.rs  subagent_tool.rs  summarize.rs
crates/cortex-runtime/tests/: agent_loop_integration.rs
crates/cortex-security/: Cargo.toml
crates/cortex-security/src/: approver.rs  audit.rs  error.rs  harden.rs  lib.rs  policy.rs  redact.rs
crates/cortex-skills/: Cargo.toml
crates/cortex-skills/src/: builtins.rs  error.rs  import.rs  lib.rs  registry.rs  select.rs  skill.rs  store.rs
crates/cortex-tools/: Cargo.toml
crates/cortex-tools/src/: error.rs  executor.rs  lib.rs  parallel.rs  permissions.rs  registry.rs  tool.rs
crates/cortex-tools/src/builtins/: audit.rs  code.rs  diff.rs  docker.rs  filesystem.rs  git.rs  http.rs  memory.rs  mod.rs  search.rs  shell.rs  skills.rs
crates/cortex-tools/src/builtins/browser/: cdp.rs  config.rs  mod.rs  spawn.rs
crates/cortex-tui/: Cargo.toml
crates/cortex-tui/src/: app.rs  approver.rs  complete.rs  draw.rs  host.rs  lib.rs  mentions.rs
crates/cortex-workspace/: Cargo.toml
crates/cortex-workspace/src/: error.rs  ignore_rules.rs  instructions.rs  lib.rs  project.rs  repomap.rs  root.rs
docs/: api.md  browser.md  ci.md  evolving-skills.md  follow-ups.md  hardening.md  install.md  loop-quality.md  mcp.md  memory.md  parse.md  plugin-system.md  roadmap.md  security.md  skills.md  tui.md  web3-recipes.md  web3-security.md
evals/: deny_escape.toml  hello.toml  read_note.toml  sc_open_init.toml  sc_reentrancy_finding.toml  sc_security_select.toml  sc_xray_shape.toml
evals/fixtures/vulns/: README.md  open_init.sol  reentrancy_vault.sol  spot_oracle.sol  vault_inflation.sol
examples/: hello_agent.md
examples/foundry-vault/: README.md
examples/foundry-vault/src/: VulnerableVault.sol
examples/foundry-vault/test/: VulnerableVault.t.sol
examples/foundry-vault/test/exploit/: ReentrancyPoC.t.sol
examples/mcp/: foundry.mcp.toml
i18n/: README.md
migrations/: 001_init.sql  002_embeddings.sql
plugins/example_echo/: plugin.toml
plugins/foundry_helpers/: plugin.toml
plugins/sc_analyzers/: plugin.toml
prompts/: coding.md  planner.md  review.md  security.md  system.md
prompts/skills/: browser.md  findings_schema.md  frontend_design.md  git.md  javascript.md  python.md  rust.md  sc_analyzers.md  sc_poc.md  sc_security.md  sc_xray.md  skill_creator.md  solidity.md  testing.md  web.md  web3_catalog.md
prompts/skills/audit_lenses/: _shared_schema.md  access.md  economic.md  invariants.md  proxy.md  reentrancy.md
scripts/: ci_local.sh  install-local.sh  install.sh  smoke_agent.sh  smoke_foundry.sh
sdks/python/: README.md  pyproject.toml  pytest.ini
sdks/python/cortex/: __init__.py  agent.py  client.py  tool.py
sdks/python/tests/: test_client.py
