[workspace]
resolver = "2"
members = [
    "crates/cortex-common",
    "crates/cortex-core",
    "crates/cortex-events",
    "crates/cortex-llm",
    "crates/cortex-models",
    "crates/cortex-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Cortex Developers"]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
toml = "0.8"
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-stream = "0.3"
bytes = "1"

# Dev/test dependencies available to workspace members.
# Member crates reference these under their own [dev-dependencies] section.
tokio-test = { version = "0.4" }
assert_matches = "1.5"
criterion = { version = "0.5" }