[workspace]
resolver = "2"
members = [
    "crates/cortex-api",
    "crates/cortex-cli",
    "crates/cortex-common",
    "crates/cortex-context",
    "crates/cortex-core",
    "crates/cortex-eval",
    "crates/cortex-events",
    "crates/cortex-llm",
    "crates/cortex-mcp",
    "crates/cortex-memory",
    "crates/cortex-models",
    "crates/cortex-parse",
    "crates/cortex-plugins",
    "crates/cortex-prompts",
    "crates/cortex-runtime",
    "crates/cortex-security",
    "crates/cortex-skills",
    "crates/cortex-tools",
    "crates/cortex-tui",
    "crates/cortex-workspace",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Cortex Developers"]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
# SSE is in axum::response::sse without extra feature on 0.7
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
toml = "0.8"
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-stream = "0.3"
bytes = "1"
glob = "0.3"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
ignore = "0.4"
walkdir = "2"
regex = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-solidity = "1.2"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Dev/test dependencies available to workspace members.
# Member crates reference these under their own [dev-dependencies] section.
tokio-test = { version = "0.4" }
assert_matches = "1.5"
criterion = { version = "0.5" }