[package]
name = "cortex-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Cortex command-line interface"
default-run = "cortex"

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cortex-common = { path = "../cortex-common" }
# SessionId used in app tool_context
cortex-core = { path = "../cortex-core" }
cortex-llm = { path = "../cortex-llm" }
cortex-mcp = { path = "../cortex-mcp" }
cortex-memory = { path = "../cortex-memory" }
cortex-models = { path = "../cortex-models" }
cortex-parse = { path = "../cortex-parse" }
cortex-plugins = { path = "../cortex-plugins" }
cortex-prompts = { path = "../cortex-prompts" }
cortex-runtime = { path = "../cortex-runtime" }
cortex-security = { path = "../cortex-security" }
cortex-skills = { path = "../cortex-skills" }
cortex-tools = { path = "../cortex-tools" }
cortex-workspace = { path = "../cortex-workspace" }
dotenvy = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
