[package]
name = "cortex-context"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Budgeted context assembly for Cortex agent loops"

[dependencies]
cortex-models = { path = "../cortex-models" }
cortex-workspace = { path = "../cortex-workspace" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
