[package]
name = "cortex-eval"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Evaluation harness for Cortex agent runs"

[dependencies]
anyhow = { workspace = true }
cortex-llm = { path = "../cortex-llm" }
cortex-models = { path = "../cortex-models" }
cortex-runtime = { path = "../cortex-runtime" }
cortex-tools = { path = "../cortex-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
