[package]
name = "cortex-events"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Event types and re-exports for the Cortex event bus"

[dependencies]
chrono = { workspace = true }
cortex-common = { path = "../cortex-common" }
cortex-core = { path = "../cortex-core" }
cortex-models = { path = "../cortex-models" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
