[package]
name = "cortex-mcp"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "MCP client: map external MCP tools onto Cortex Tool trait"

[dependencies]
async-trait = { workspace = true }
cortex-tools = { path = "../cortex-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
