[package]
name = "cortex-memory"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Durable session, event, and checkpoint storage for Cortex (SQLite)"

[dependencies]
chrono = { workspace = true }
cortex-common = { path = "../cortex-common" }
cortex-models = { path = "../cortex-models" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
