[package]
name = "cortex-models"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Domain models for messages, tools, sessions, plans, and artifacts"

[dependencies]
chrono = { workspace = true }
cortex-common = { path = "../cortex-common" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
uuid = { workspace = true }
