[package]
name = "cortex-prompts"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Markdown prompt loading and simple templating for Cortex"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
