[package]
name = "cortex-security"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Security policy, secrets redaction, and approval audit types for Cortex"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
cortex-common = { path = "../cortex-common" }
cortex-tools = { path = "../cortex-tools" }
serde = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
