[package]
name = "cortex-skills"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Skill packs: capability metadata for tools and prompts"

[dependencies]
cortex-prompts = { path = "../cortex-prompts" }
cortex-workspace = { path = "../cortex-workspace" }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
