[package]
name = "cortex-tui"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Terminal UI for Cortex agents (ratatui)"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
cortex-common = { path = "../cortex-common" }
cortex-core = { path = "../cortex-core" }
cortex-events = { path = "../cortex-events" }
cortex-llm = { path = "../cortex-llm" }
cortex-memory = { path = "../cortex-memory" }
cortex-models = { path = "../cortex-models" }
cortex-prompts = { path = "../cortex-prompts" }
cortex-runtime = { path = "../cortex-runtime" }
cortex-skills = { path = "../cortex-skills" }
cortex-tools = { path = "../cortex-tools" }
cortex-workspace = { path = "../cortex-workspace" }
crossterm = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
