[package]
name = "cortex-workspace"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "Workspace discovery, ignore rules, project detection, and repo maps"

[dependencies]
ignore = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
